part-1/timestamp-string/mainifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: timestamp-string-svc 
spec:
  type: ClusterIP
  selector:
    app: timestamp-string 
  ports:
  - port: 2345 
    targetPort: 3000
